--- a/Qwizzi-front-end/src/assets/main.css
+++ b/Qwizzi-front-end/src/assets/main.css
@@ -2,6 +2,8 @@
 
 body {
   font-family: "Quicksand", sans-serif;
+  background-color: rgb(255, 237, 237);
+  min-height: 403px;
 }
 
 h1,
@@ -37,59 +39,70 @@ h2 {
 
 /* letters paars */
 .letterType {
-    color: rgb(89, 0, 89);
-    margin-right: 20px;
-    font-weight: bold;
-    font-size: 30px;
+  color: rgb(89, 0, 89);
+  margin-right: 20px;
+  font-weight: bold;
+  font-size: 30px;
 }
 
 /* input fields  */
 .inputFields {
-    width: 500px;
-    height: 50px;
-    border-radius: 100px;
-    padding: 15px 20px 15px 20px;
-    font-size: 25px;
+  width: 500px;
+  height: 50px;
+  border-radius: 100px;
+  padding: 15px 20px 15px 20px;
+  font-size: 25px;
 }
 
 /* wit hover paars button */
 .mainButton:hover,
 .mainButton {
-    margin-top: 40px;
-    border-radius: 50px;
-    border-style: solid;
-    border-width: 3px;
-    font-size: 35px;
-    padding: 2px 20px 2px 20px;
-    background-color: rgb(255, 240, 255);
-    border-color: rgb(89, 0, 89);
-    color: rgb(89, 0, 89);
-    font-weight: bold;
-    width: 150px;
-    align-content: center;
+  border-radius: 50px;
+  border-style: solid;
+  border-width: 3px;
+  padding: 2px 20px 2px 20px;
+  background-color: rgb(255, 240, 255);
+  border-color: rgb(89, 0, 89);
+  color: rgb(89, 0, 89);
+  font-weight: bold;
+  width: fit-content;
 }
 
 .mainButton:hover {
-    background-color: rgb(89, 0, 89);
-    color: rgb(255, 244, 255);
+  background-color: rgb(89, 0, 89);
+  color: rgb(255, 244, 255);
 }
 
 /* paars hover wit button */
 .mainButtonReverse:hover,
 .mainButtonReverse {
-    margin-top: 30px;
-    border-radius: 50px;
-    border-style: solid;
-    border-width: 3px;
-    font-size: 35px;
-    padding: 2px 20px 2px 20px;
-    background-color: rgb(89, 0, 89);
-    border-color: rgb(89, 0, 89);
-    color: rgb(255, 244, 255);
-    font-weight: bold;
+  border-radius: 50px;
+  border-style: solid;
+  border-width: 3px;
+  padding: 2px 20px 2px 20px;
+  background-color: rgb(89, 0, 89);
+  border-color: rgb(89, 0, 89);
+  color: rgb(255, 244, 255);
+  font-weight: bold;
 }
 
 .mainButtonReverse:hover {
-    background-color: rgb(255, 244, 255);
-    color: rgb(89, 0, 89);
+  background-color: rgb(255, 244, 255);
+  color: rgb(89, 0, 89);
+}
+
+#voidDiv60 {
+  display: flex;
+  flex-direction: column;
+  height: 510px;
+  border-radius: 30px;
+  width: 56%;
+}
+
+#voidDiv30 {
+  display: flex;
+  flex-direction: column;
+  height: 510px;
+  border-radius: 30px;
+  width: 28%;
 }
