kleine aanpassing amrgin naar padding

--- a/Qwizzi-front-end/src/assets/playQuiz.css
+++ b/Qwizzi-front-end/src/assets/playQuiz.css
@@ -44,7 +44,7 @@
 #answerContainer {
     display: flex;
     flex-direction: column;
-    margin: 30px;
+    padding: 30px;
     padding-left: 50px;
 }
 
